Fix data races in scheduler, plugin manager and player list (#1183)
* Fix scheduler data races

* Use HandlerList.unregisterAll to unregister plugin events

* Fix plugin manager data races

* Fix player list race conditions

* Make internal methods protected and @ApiStatus.Internal